Create the Main Sections in the Index File
Add four sections in the home page with their classes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zahraa</title>
+    <title>Landi Babaya</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <section--1 class="header">
+        <nav class="header-navbar">
+            <ul>
+                <li>About</li>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <div class="header-content">
+            <div class="header-left-content">
+                <h3>Hello There!</h3>
+                <p>Most welcome to my land, my tech land</p>
+                <button>Browse</button>
+            </div>
+            <div class="header-right-content">
 
+                <img src="./assets/images/header-pic.jpeg" alt="see-land-photo">
+            </div>
+        </div>
+    </section--1>
+
+    <section--2 class="projects">
+        <h4>Projects</h4>
+        <div class="projects-cards">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </section--2>
+
+    <section--3 class="quote">
+        <p>Feel free to contact me via:
+            Email: example@example.com
+        </p>
+    </section--3>
+
+    <footer>
+        @copyright
+    </footer>
 </body>
 
 </html>
